--- a/Django/templates/static/osciloscopio/css/unidades.css
+++ b/Django/templates/static/osciloscopio/css/unidades.css
@@ -1,3 +1,60 @@
 h1 {
     color: blue;
 }
+
+body{
+    margin: 0;
+    min-height: 100vh;
+    background-color: #143C85;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#ondinha{
+    position: fixed;
+    width: 100vw;       /* Largura da figura é 100% da tela */
+    bottom: 0;
+    opacity: 0.5;
+    object-fit: cover; /* Garante que cobre sem distorcer */
+    z-index: -1;        /* Joga a onda 'para trás' */
+}
+
+#box-titulo{
+    
+    width: 90vw;
+    background: #D9D9D9;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    border-bottom: 1px black solid;
+    justify-content: space-between;         
+    align-items: center;
+    gap: auto;
+    display: inline-flex;
+
+}
+
+#janela-principal{
+    
+    width: 90vw;
+    height:90vh;
+    background: #8C8C8C;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25) inset;
+    border-radius: 20px;
+    flex-direction: column;
+    align-items: center;
+    display: inline-flex;
+    z-index: 1;
+}
+
+#centro-tela{
+
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+    justify-content: flex-start;
+    align-items: center; 
+    align-self: stretch;
+    display: inline-flex;
+    background-color: green;
+    z-index: 2;
+}
