Alterações no CSS

--- a/Django/osciloscopio/templates/unidades/unidades.html
+++ b/Django/osciloscopio/templates/unidades/unidades.html
@@ -54,8 +54,12 @@
             </a>
 
         </div>
-        <div id = "centro-tela">
 
+        <!-- Centro da janela-->
+        <div id = "centro-janela">
+            <div class = "aba-esquerda" > 
+
+            </div>
         </div>
     </div>
 
