--- a/Django/osciloscopio/templates/unidades/unidades.html
+++ b/Django/osciloscopio/templates/unidades/unidades.html
@@ -58,7 +58,15 @@
         <!-- Centro da janela-->
         <div id = "centro-janela">
             <div class = "aba-esquerda" > 
-
+                <div style="width: 148px; justify-content: flex-start; align-items: center; display: inline-flex">
+                    <div style="flex: 1 1 0; height: 68px; padding-top: 8px; padding-bottom: 8px; background: #C1C1C1; border-bottom: 2px #DBDBDB solid; justify-content: center; align-items: center; gap: 10px; display: flex">
+                      <div style="width: 20.13px; height: 20px; transform: rotate(180deg); transform-origin: top left; background: black"></div>
+                    </div>
+                    <div style="flex: 1 1 0; height: 68px; padding-top: 8px; padding-bottom: 8px; background: #C1C1C1; border-left: 2px #DBDBDB solid; border-top: 2px #DBDBDB solid; border-right: 2px #DBDBDB solid; justify-content: center; align-items: center; gap: 10px; display: flex">
+                      <div style="width: 24.03px; height: 24px; transform: rotate(180deg); transform-origin: top left; background: #D9D9D9"></div>
+                      <div style="width: 20px; height: 20px; transform: rotate(360deg); transform-origin: top left; background: #1C1B1F"></div>
+                    </div>
+                  </div>
             </div>
         </div>
     </div>
