--- a/Django/osciloscopio/templates/unidades/unidades.html
+++ b/Django/osciloscopio/templates/unidades/unidades.html
@@ -38,11 +38,11 @@
             
             <!-- Logo LIOC -->
             <a href="http://www.lioc.oceanica.ufrj.br/" title = "Vai pro site do LIOC" target="_blank">
-                <img style="width: 150px; height: 70px" src=" {% static 'osciloscopio/imagens/logo-lioc.png' %}" />
+                <img id = "logo-lioc"  src=" {% static 'osciloscopio/imagens/logo-lioc.png' %}" />
             </a>
 
             <!-- Título  -->
-            <div style="text-align: center; color: var(--Fundo-site-LIOC, #143C85); font-size: 40px; font-family: Wavefont; font-weight: 400; word-wrap: break-word">GerOndApp</div>
+            <div id = "titulo" >GerOndApp</div>
 
             <!-- Logo ReNOMO -->
 
@@ -50,7 +50,7 @@
                 title="Vai pro site da ReNOMO"
                 target="_blank">
 
-                <img style="width: 162px; height: 67px" src="{% static 'osciloscopio/imagens/Logo-ReNOMO.png' %}" />
+                <img id="logo-renomo" src="{% static 'osciloscopio/imagens/Logo-ReNOMO.png' %}" />
             </a>
 
         </div>
