--- a/Django/osciloscopio/templates/configuracoes/configuracoes.html
+++ b/Django/osciloscopio/templates/configuracoes/configuracoes.html
@@ -1,13 +1,28 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="{% static '/osciloscopio/css/componentes/popup.css' %}">
 </head>
 <body>
     <h1>Configurações</h1>
     <h2>Alow</h2>
     <hr>
+    <button class="botao-abrir">Abrir Pop-up</button>
+
+<div class="popup">
+  <div class="popup-conteudo">
+        <h2>Título do Pop-up</h2>
+            <p>Este pop-up usa JavaScript para controle avançado.</p>
+        <button class="fechar">&times;</button>
+  </div>
+</div>
+
+<script src="{% static '/osciloscopio/js/popup.js' %}"></script>
 </body>
+
+
 </html>
