--- a/Django/osciloscopio/templates/unidades/aba-central.html
+++ b/Django/osciloscopio/templates/unidades/aba-central.html
@@ -12,6 +12,13 @@
 
     </div>
     <div class="area-grafico">
-
+        <div class="popup">
+            
+            <div class="popup-conteudo">
+                  <h2>Título do Pop-up</h2>
+                      <p>Este pop-up usa JavaScript para controle avançado.</p>
+                  <button class="fechar">&times;</button>
+            </div>
+          </div>
     </div>  
 </div>
