--- a/Django/templates/static/osciloscopio/css/componentes/aba-central.css
+++ b/Django/templates/static/osciloscopio/css/componentes/aba-central.css
@@ -30,7 +30,7 @@
 .aba-aplicacao:focus{
     
     transform-origin: bottom center; /* Ponto de origem na base */
-    transform: scaleY(1.1); /* Aumenta apenas na vertical (para cima) */
+    transform: scale(1.1); /* Aumenta apenas na vertical (para cima) */
     transition: transform 0.3s ease; /* Animação suave */
 
     border-top-left-radius: 10px;
@@ -53,7 +53,4 @@
 .area-grafico{
     width: 100%;
     height: 100%;
-
-    border: 2px solid green;
-
 }
