Adição da aba direita e configurações da aba central

--- a/Django/osciloscopio/templates/unidades/aba-esquerda.html
+++ b/Django/osciloscopio/templates/unidades/aba-esquerda.html
@@ -1,6 +1,6 @@
             <!-- Aba esquerda -->
             <div class = "aba" >
-                <div class = "container-config-about">
+                <div class = "container-conjunto-abas">
                     <div class = "container-aba" id="container-configuracoes"
                     >
                         <!-- ICONE CONFIGURAÇÕES -->
@@ -22,12 +22,12 @@
                     </div>
                 </div>
 
-                <div class="titulo-container" id="container-unidades-titulo">
-                    <h1 id ="titulo-unidades">Unidades</h1>     
+                <div class="container-titulo" id="container-unidades-titulo">
+                    <h2>Unidades</h2>     
                             
                 </div>
                 <hr style="width: 100%; margin: 0; padding: 0; overflow: hidden; border:none;  height: 2px;background-color: black">   
-                <div id="container-unidades">
+                <div class="container-unidades">
             
                     {% include 'unidades/formulario-unidades.html' %}
                 </div>
