--- a/Django/templates/static/osciloscopio/css/componentes/abas-laterais.css
+++ b/Django/templates/static/osciloscopio/css/componentes/abas-laterais.css
@@ -5,52 +5,114 @@
     border-right: var(--espessura-borda) solid #666;
     border-image: linear-gradient(80deg, var(--cinza-claro), var(--cinza-medio)) 1;
     border-bottom-left-radius: var(--curva-borda);
+    
     display: flex;
     flex-direction: column;
 
-    align-items: flex-start;
 }
 
 #aba-direita{
 
-    width: 20%;
+    width: 25%;
     border-right: none;
     border-bottom-left-radius: 0;
     border-left: var(--espessura-borda) solid #666;
-    border-image: linear-gradient(80deg, var(--cinza-claro), var(--cinza-medio)) 1;
+
+    justify-content: space-between;
 }
 
-.container-config-about{
+#titulo-entradas{
+    font-size: 1.5vw;
+    color: black;
+}
+
+
+
+.container-conjunto-abas{
     display: flex;
 
     width: 100%;
     height: 8%;
-
-    max-height: 10%;
 }
+
 
 .container-aba{
     width: 50%;
     height: 100%;
-    border-bottom: 1px solid white;
-    
+  
+    border: 1px solid white;
 
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-#container-unidades{
-    width: 100%;
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.container-futuro{
+    flex: 1;   
 }
-
 
 #container-configuracoes{
     border-right: 1px solid white;
+    border-bottom: 1px solid white;
+}
+
+.container-unidades{
+
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+
+    align-items: center;
+    justify-content: center;
+
+    padding: 5px;
+}
+
+.container-inputs{
+    height: 55%;
+   
+   
+    display: flex;
+    flex-direction: column;
+    
+    align-items: center;
+    justify-content: space-between;
+
+    padding: 5px;
+}
+
+.container-par-entradas{
+
+    width: 100%;
+
+    display: flex;
+    
+    justify-content: space-between;
 }
 
 
+.container-futuro{
+    visibility: visible;
+}
+
+#abas-futuras{
+
+    height: 20%;
+
+}
+
+#aba-futura1{
+    width: 25%;
+}
+
+#aba-futura2{
+    width: 25%;
+}
+
+#aba-futura3{
+    width: 25%;
+}
+
+#aba-futura4{
+    width: 25%;
+}
