--- a/Django/templates/static/osciloscopio/css/base/formulario-unidades.css
+++ b/Django/templates/static/osciloscopio/css/base/formulario-unidades.css
@@ -1,6 +1,6 @@
 
   
-  .oscilloscope-form {
+  .formulario-entrada {
     max-width: 600px;
     
     display: flex;
@@ -42,14 +42,12 @@
   
   .form-input-group,
   .form-input-single {
-    background: white;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     display: flex;
     flex-direction: column;
     align-items: center;
     position: relative;
     height: 50%;
-    margin: 5px;
+    padding: 5px;
   
   }
   
