adicionado o formulário de entradas

--- a/Django/osciloscopio/templates/unidades/formulario-unidades.html
+++ b/Django/osciloscopio/templates/unidades/formulario-unidades.html
@@ -5,11 +5,12 @@
       <!-- Amplitude -->
       <div class="form-group">
         <label for="amplitude" class="form-label">Amplitude</label>
-        <div class="form-input-group">
+        <div class="form-select">
           <select name="unidade-amplitude" id="unidade-amplitude">
             <option value="m">m</option>
             <option value="m/s">m/s</option>
-            <option value="m/s²">m/s²</option>
+            <option value="m-s-s">m/s²</option>
+            <option value="graus-celsius">°C</option>
           </select>
         </div>
       </div>
@@ -17,7 +18,7 @@
       <!-- Período -->
       <div class="form-group">
         <label for="unidade-periodo" class="form-label">Período</label>
-        <div class="form-input-single">
+        <div class="form-select">
           <select name="unidade-periodo" id="unidade-periodo">
             <option value="m">m</option>
             <option value="m/s">m/s</option>
@@ -29,11 +30,11 @@
       <!-- Duração -->
       <div class="form-group">
         <label for="unidade-duracao" class="form-label">Duração</label>
-        <div class="form-input-single">
+        <div class="form-select">
           <select name="unidade-duracao" id="unidade-duracao">
-            <option value="m">m</option>
-            <option value="m/s">m/s</option>
-            <option value="m/s²">m/s²</option>
+            <option value="seg">s</option>
+            <option value="min">m</option>
+            <option value="hour">h</option>
           </select>        
         </div>
       </div>
@@ -41,11 +42,9 @@
       <!-- Frequência -->
       <div class="form-group">
         <label for="unidade-frequencia" class="form-label">Frequência</label>
-        <div class="form-input-single">
+        <div class="form-select">
           <select name="unidade-frequencia" id="unidade-frequencia">
-            <option value="m">m</option>
-            <option value="m/s">m/s</option>
-            <option value="m/s²">m/s²</option>
+            <option value="hz">hz</option>
           </select>        
         </div>
       </div>
@@ -53,11 +52,9 @@
       <!-- Fase -->
       <div class="form-group">
         <label for="unidade-fase" class="form-label">Fase</label>
-        <div class="form-input-single">
+        <div class="form-select">
           <select name="unidade-fase" id="unidade-fase">
-            <option value="m">m</option>
-            <option value="m/s">m/s</option>
-            <option value="m/s²">m/s²</option>
+            <option value="rad">rad</option>
           </select>        
         </div>
       </div>
