--- a/Django/osciloscopio/templates/unidades/formulario-unidades.html
+++ b/Django/osciloscopio/templates/unidades/formulario-unidades.html
@@ -1,4 +1,4 @@
-<form action = " {% url 'unidades' %} " method="post" class="formulario-entrada">
+<form id = "form-unidades" action = " {% url 'unidades' %} " method="post" class="formulario-entrada">
     {% csrf_token %}
     
     <div class="form-container">
