FINALMENTE ADICIONEI O GRÁFICOgit config --global user.name lucas-noblatgit config --global user.name lucas-noblat

--- a/Django/osciloscopio/templates/unidades/aba-central.html
+++ b/Django/osciloscopio/templates/unidades/aba-central.html
@@ -12,6 +12,15 @@
 
     </div>
     <div class="area-grafico">
+        {{ div | safe }}
+            <!-- Scripts do Bokeh -->
+        {{ cdn_js | safe }}
+        {{ script | safe }}
+    </div>  
+</div>
+
+<!--
+
         <div class="popup">
             
             <div class="popup-conteudo">
@@ -20,5 +29,5 @@
                   <button class="fechar">&times;</button>
             </div>
           </div>
-    </div>  
-</div>
+
+-->
