--- a/Django/templates/static/osciloscopio/css/componentes/abas-laterais.css
+++ b/Django/templates/static/osciloscopio/css/componentes/abas-laterais.css
@@ -117,3 +117,12 @@
     width: 25%;
 }
 
+.area-grafico{
+    width: 100%;
+    height: 100%;
+    border: 2px solid yellow;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
