Modificações na função principal de plotagem, alguns ajustes

--- a/Django/templates/static/osciloscopio/css/componentes/aba-central.css
+++ b/Django/templates/static/osciloscopio/css/componentes/aba-central.css
@@ -50,7 +50,14 @@
 
     z-index: 0;
 }
+
 .area-grafico{
-    width: 100%;
+    
+    width: 99%;
     height: 100%;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
 }
