--- a/Django/osciloscopio/templates/unidades/formulario-entradas.html
+++ b/Django/osciloscopio/templates/unidades/formulario-entradas.html
@@ -1,15 +1,33 @@
 <form  id = "form-entrada" action=" {% url 'unidades' %}" method="post" class="formulario-entrada">
     <!-- Forma do sinal -->
-    <div class="form-group" id="grupo-forma-sinal">
-        <label for="entrada-forma-sinal" class="form-label">Forma do sinal</label>
-        <div class="form-select">
-            <select name="entrada-forma-sinal" id="entrada-forma-sinal">
-                <option value="senoidal">Senoidal</option>
-                <option value="quadrada">Quadrada</option>
-                <option value="triangular">Triangular</option>
-                <option value="ruido-branco">Ruído Branco</option>
-            </select>        
-        </div>            
+    <div class = "container-par-entradas" id = "par-number-sinal">
+
+        <div class="form-group" id="grupo-numero-sinal">
+            <div class="form-select" id = "select-numero-sinal">
+                <select name="entrada-numero-sinal" id="entrada-numero-sinal">
+                    <option value="s1">Sinal 1</option>
+                    <option value="s2">Sinal 2</option>
+                    <option value="s3">Sinal 3</option>
+                    <option value="s4">Sinal 4</option>
+                    <option value="s5">Sinal 5</option>
+                </select>        
+            </div> 
+        </div>
+
+
+
+        <div class="form-group" id="grupo-forma-sinal">
+            <label for="entrada-forma-sinal" class="form-label">Forma do sinal</label>
+            <div class="form-select" id = "select-forma-sinal">
+                <select name="entrada-forma-sinal" id="entrada-forma-sinal">
+                    <option value="senoidal">Senoidal</option>
+                    <option value="quadrada">Quadrada</option>
+                    <option value="triangular">Triangular</option>
+                    <option value="ruido-branco">Ruído Branco</option>
+                </select>        
+            </div>            
+        </div>
+
     </div>
 
     <div class = "container-par-entradas">
