--- a/Django/templates/static/osciloscopio/css/componentes/abas-laterais.css
+++ b/Django/templates/static/osciloscopio/css/componentes/abas-laterais.css
@@ -98,10 +98,20 @@
     width: 100%;
 
     display: flex;
-    
+
     justify-content: space-between;
 }
 
+#par-number-sinal{
+
+    height: 25%;
+    /*border: 1px solid lightseagreen;*/
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: space-between;
+}
 
 .container-futuro{
     visibility: visible;
@@ -117,12 +127,3 @@
     width: 25%;
 }
 
-.area-grafico{
-    width: 100%;
-    height: 100%;
-    border: 2px solid yellow;
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
