Alteração do nome da aplicação de osciloscópio -> home

--- a/Django/home/templates/unidades/aba-central.html
+++ b/Django/home/templates/unidades/aba-central.html
@@ -1,11 +1,15 @@
 <div id = "aba-central">
     <div class="barra-aplicacoes">
-        <div id = "aba-osciloscopio" class ="aba-aplicacao" role="button" tabindex="0">
-            <h3>Osciloscópio</h3>
-        </div>
-        <div id = "espectro" class="aba-aplicacao" role="button" tabindex="0">
-            <h3>Espectro</h2>
-        </div>
+            <div id = "aba-osciloscopio" class ="aba-aplicacao" role="button" tabindex="0">
+                <h3>Osciloscópio</h3>
+            </div>
+
+        <a href="http://127.0.0.1:8000/osciloscopio" id="ancora-espectro"> 
+            <div id = "aba-espectro" class="aba-aplicacao" role="button" tabindex="0">
+                <h3>Espectro</h2>
+            </div>
+        </a> 
+
     </div>
 
     <div class="barra-sinais">
