--- a/Django/templates/static/osciloscopio/css/base/formulario-unidades.css
+++ b/Django/templates/static/osciloscopio/css/base/formulario-unidades.css
@@ -58,8 +58,8 @@
 
     background-color: white;
     margin: 5px;
-  
-  }
+    padding-right: 5px;
+      }
   
   #entrada-numero-sinal{
     height: 100%;
