--- a/Django/templates/static/osciloscopio/css/componentes/aba-central.css
+++ b/Django/templates/static/osciloscopio/css/componentes/aba-central.css
@@ -15,11 +15,19 @@
 }
 
 .aba-aplicacao{
+
     width: 12.5%;
     height: 100%;
 
-    background-color: var(--cinza-medio);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    
+    /*background-color: var(--cinza-medio);*/
     border-right: 1px solid white;
+
+
 
     cursor: pointer;
     z-index: 1;
@@ -53,11 +61,17 @@
 
 .area-grafico{
     
-    width: 99%;
+    width: 100%;
     height: 100%;
 
     display: flex;
     align-items: center;
     justify-content: center;
 
+}
+
+#ancora-espectro{
+    width: 100%;
+    height: 100%;
+    text-decoration: none;
 }
