--- a/Django/home/templates/home/formulario-entradas.html
+++ b/Django/home/templates/home/formulario-entradas.html
@@ -1,4 +1,4 @@
-<form  id = "form-entrada" action=" {% url 'unidades' %}" method="post" class="formulario-entrada">
+<form  id = "form-entrada" action=" {% url 'osciloscopio' %}" method="post" class="formulario-entrada">
     <!-- Forma do sinal -->
     <div class = "container-par-entradas" id = "par-number-sinal">
 
@@ -83,4 +83,5 @@
             </div>            
         </div>
     </div>
+    <button type="button" id="botao-input" onclick="enviarDados()">Gerar sinal</button>
 </form>
