--- a/Django/home/templates/home/formulario-unidades.html
+++ b/Django/home/templates/home/formulario-unidades.html
@@ -1,4 +1,4 @@
-<form id = "form-unidades" action = " {% url 'unidades' %} " method="post" class="formulario-entrada">
+<form id = "form-unidades" action = " {% url 'osciloscopio' %} " method="post" class="formulario-entrada">
     {% csrf_token %}
     
     <div class="form-container">
