--- a/Django/templates/static/osciloscopio/css/componentes/aba-central.css
+++ b/Django/templates/static/osciloscopio/css/componentes/aba-central.css
@@ -61,12 +61,25 @@
 
 .area-grafico{
     
-    width: 100%;
-    height: 100%;
+    flex: 1;
 
     display: flex;
     align-items: center;
     justify-content: center;
+
+
+}
+
+.grafico{
+
+    width: 95%;
+    height: 90%;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    box-shadow: 1px 1px 4px;
 
 }
 
