--- a/Django/templates/static/osciloscopio/css/componentes/abas-laterais.css
+++ b/Django/templates/static/osciloscopio/css/componentes/abas-laterais.css
@@ -69,7 +69,7 @@
 }
 
 .container-inputs{
-    height: 55%;
+    height: 60%;
  
     display: flex;
     flex-direction: column;
@@ -80,6 +80,22 @@
     padding: 5px;
     
 }
+
+
+
+#botao-input{
+    width: 50%;
+    height: 10%;
+    font-size: 1.1vw;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+
+    background: #4CAF50;
+    margin-bottom: 10px;
+}
+
 
 #form-entrada{
     width: 100%;
