Alteração das abas dos sinais e conexão com o backend para gerar os sinais, ainda incompleto

--- a/Django/home/templates/home/aba-direita.html
+++ b/Django/home/templates/home/aba-direita.html
@@ -3,6 +3,31 @@
         <h2 >Entradas</h2>
     </div>
     <hr style="width: 100%; margin: 0; padding: 0; border:none;  height: 2px;background-color: black">
+    <div class = "container-futuro" id = "container-sinais">
+        <div id = "abas-sinais" class = "container-conjunto-abas" >
+
+            <div class="container-aba" id="sinal-1">
+                <h3>S1</h3>
+            </div>
+
+            <div class="container-aba" id="sinal-2">
+                <h3>S2</h3>
+            </div>
+
+            <div class="container-aba" id="sinal-3">
+                <h3>S3</h3>
+            </div>
+
+            <div class="container-aba" id="sinal-4">
+                <h3>S4</h3>
+            </div>
+
+            <div class="container-aba" id="sinal-5">
+                <h3>S5</h3>
+            </div>
+        </div>
+ 
+    </div>
     <div class="container-inputs">
         
         {% include 'home/formulario-entradas.html' %}
