Adicionei toda a lógica de criação dos 4 sinais, porém ainda falta criar a resultante

--- a/Django/home/templates/home/aba-central.html
+++ b/Django/home/templates/home/aba-central.html
@@ -1,7 +1,7 @@
 <div id = "aba-central">
     <div class="barra-aplicacoes">
-            <div id = "aba-osciloscopio" class ="aba-aplicacao" role="button" tabindex="0">
-                <h3>Osciloscópio</h3>
+            <div id = "aba-osciloscopio" class ="aba-aplicacao" role="button" tabindex="0" onclick=window.alert('Oi')>
+                <h3>Domínio do tempo</h3>
             </div>
 
         <a href="http://127.0.0.1:8000/home/espectro" id="ancora-espectro"> 
