--- a/Django/home/templates/home/formulario-entradas.html
+++ b/Django/home/templates/home/formulario-entradas.html
@@ -9,8 +9,8 @@
                 <select name="entrada-forma-sinal" id="entrada-forma-sinal" value = {{forma}}>
                     <option value="senoidal"  {% if ultima_forma == 'senoidal' %} selected {% endif %}>Senoidal</option>
                     <option value="quadrada"  {% if ultima_forma == 'quadrada' %} selected{% endif %}>Quadrada</option>
-                    <option value="triangular">Triangular</option>
-                    <option value="ruido-branco">Ruído Branco</option>
+                    <option value="triangular" {% if ultima_forma == 'triangular' %} selected{% endif %} >Triangular</option>
+                    <option value="ruido-branco" {% if ultima_forma == 'ruido-branco' %} selected{% endif %}>Ruído Branco</option>
                 </select>        
             </div>            
         </div>
@@ -22,7 +22,7 @@
         <div class="form-group" id="grupo-amplitude">
             <label for="entrada-amplitude" class="form-label">Amplitude</label>
             <div class="form-number">
-                <input type="number" name="entrada-amplitude" id="entrada-amplitude" min= 0 max = 100 value = {{amplitude}}>
+                <input type="number" name="entrada-amplitude" id="entrada-amplitude" min= 0 max = 100 value = {{amplitude}} required> 
             </div>            
         </div> 
 
@@ -30,7 +30,7 @@
         <div class="form-group" id="grupo-intervalo">
             <label for="entrada-intervalo" class="form-label">Intervalo</label>
             <div class="form-number">
-                <input type="number" name="entrada-intervalo" id="entrada-intervalo" min= 0 max = 100 step = 0.1 value = 0.1>
+                <input type="number" name="entrada-intervalo" id="entrada-intervalo" min= 0 max = 100 step = 0.1 value = 0.1 required>
             </div>            
         </div>
     </div>
@@ -40,7 +40,7 @@
         <div class="form-group" id="grupo-frequencia">
             <label for="entrada-frequencia" class="form-label">Frequência</label>
             <div class="form-number">
-                <input type="number" name="entrada-frequencia" id="entrada-frequencia" min= 0 max = 100 value = {{frequencia}}>
+                <input type="number" name="entrada-frequencia" id="entrada-frequencia" min= 0 max = 100 value = {{frequencia}} required>
             </div>            
         </div> 
         
@@ -48,7 +48,7 @@
         <div class="form-group" id="grupo-fase">
             <label for="entrada-group" class="form-label">Fase</label>
             <div class="form-number">
-                <input type="number" name="entrada-fase" id="entrada-fase" min= 0 max = 100 value = {{fase}}>
+                <input type="number" name="entrada-fase" id="entrada-fase" min= 0 max = 100 value = {{fase}} required>
             </div>            
         </div>
     </div>
@@ -58,7 +58,7 @@
         <div class="form-group" id="grupo-duracao">
             <label for="entrada-duracao" class="form-label">Duração</label>
             <div class="form-number">
-                <input type="number" name="entrada-duracao" id="entrada-duracao" min= 0 max = 100 value = 1>
+                <input type="number" name="entrada-duracao" id="entrada-duracao" min= 0 max = 100 value = {{duracao}} required>
             </div>            
         </div> 
         
@@ -66,7 +66,7 @@
         <div class="form-group" id="grupo-intervalo">
             <label for="entrada-offset" class="form-label">Offset</label>
             <div class="form-number">
-                <input type="number" name="entrada-offset" id="entrada-offset" min= 0 max = 100 value = 0>
+                <input type="number" name="entrada-offset" id="entrada-offset" min= 0 max = 100 value = {{offset}} required>
             </div>            
         </div>
     </div>
