--- a/Django/home/templates/home/formulario-entradas.html
+++ b/Django/home/templates/home/formulario-entradas.html
@@ -22,7 +22,7 @@
         <div class="form-group" id="grupo-amplitude">
             <label for="entrada-amplitude" class="form-label">Amplitude</label>
             <div class="form-number">
-                <input type="number" name="entrada-amplitude" id="entrada-amplitude" min= 0 max = 100 value = {{amplitude}} required> 
+                <input type="number" name="entrada-amplitude" id="entrada-amplitude" min= 0 max = 100  value = {{amplitude}}  required> 
             </div>            
         </div> 
 
@@ -30,7 +30,7 @@
         <div class="form-group" id="grupo-intervalo">
             <label for="entrada-intervalo" class="form-label">Intervalo</label>
             <div class="form-number">
-                <input type="number" name="entrada-intervalo" id="entrada-intervalo" min= 0 max = 100 step = 0.1 value = 0.1 required>
+                <input type="number" name="entrada-intervalo" id="entrada-intervalo" min= 0 max = 100 step = 0.1  value = {{intervalo}} required>
             </div>            
         </div>
     </div>
@@ -40,7 +40,7 @@
         <div class="form-group" id="grupo-frequencia">
             <label for="entrada-frequencia" class="form-label">Frequência</label>
             <div class="form-number">
-                <input type="number" name="entrada-frequencia" id="entrada-frequencia" min= 0 max = 100 value = {{frequencia}} required>
+                <input type="number" name="entrada-frequencia" id="entrada-frequencia" min= 0 max = 100  value = {{frequencia}}  value = 1  required>
             </div>            
         </div> 
         
@@ -48,7 +48,7 @@
         <div class="form-group" id="grupo-fase">
             <label for="entrada-group" class="form-label">Fase</label>
             <div class="form-number">
-                <input type="number" name="entrada-fase" id="entrada-fase" min= 0 max = 100 value = {{fase}} required>
+                <input type="number" name="entrada-fase" id="entrada-fase" min= 0 max = 100  value = {{fase}}  value = 0  required>
             </div>            
         </div>
     </div>
@@ -58,7 +58,7 @@
         <div class="form-group" id="grupo-duracao">
             <label for="entrada-duracao" class="form-label">Duração</label>
             <div class="form-number">
-                <input type="number" name="entrada-duracao" id="entrada-duracao" min= 0 max = 100 value = {{duracao}} required>
+                <input type="number" name="entrada-duracao" id="entrada-duracao" min= 0 max = 100 value = {{duracao}}  value = 1 required>
             </div>            
         </div> 
         
