Atualizei a lógica de criação de sinais, agora é passado um dicionário com os parâmetros do sinal. Além disso, atualizei a view de osciloscópio na tentativa de usar listas normais para armazenar os valores referentes a cada sinal

--- a/Django/home/templates/home/formulario-entradas.html
+++ b/Django/home/templates/home/formulario-entradas.html
@@ -22,7 +22,7 @@
         <div class="form-group" id="grupo-amplitude">
             <label for="entrada-amplitude" class="form-label">Amplitude</label>
             <div class="form-number">
-                <input type="number" name="entrada-amplitude" id="entrada-amplitude" min= 0 max = 100  value = {{amplitude}} required> 
+                <input type="number" name="entrada-amplitude" id="entrada-amplitude" min= 0 max = 100  value = {{amplitude}}  step = 1.00 required> 
             </div>            
         </div> 
 
