--- a/Django/home/templates/home/base.html
+++ b/Django/home/templates/home/base.html
@@ -37,6 +37,6 @@
 <script type="text/javascript" src="https://cdn.bokeh.org/bokeh/release/bokeh-mathjax-3.7.2.min.js"></script>
 <script type="text/javascript" src="https://cdn.bokeh.org/bokeh/release/bokeh-api-3.7.2.min.js"></script>
 
-<script src="{% static 'home/js/index.js' %}"></script>
+<script src="{% static 'osciloscopio/js/index.js' %}" defer></script>
 
 </html>
